# AWS-IoT-Lamps-ESP32

project/: sdkconfig
project/main/: CMakeLists.txt  aws_connection.c  aws_connection.h  led_driver.cpp  led_driver.h  main.c
